--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://host.docker.internal:8181",
+  "proxy": "http://172.17.0.1:8181",
   "eslintConfig": {
     "extends": [
       "react-app",
